--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ packages = ["src/aiventure"]
 
 [project]
 name = "aiventure"
-version = "0.0.1"
+dynamic = ["version"]
 description = "A strategy game where you build and lead AI labs to dominate the tech industry through smart investments and innovation."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -26,6 +26,9 @@ classifiers = [
 dependencies = [
     # Add your dependencies here or `uv add <package>` to add them
     # e.g. "pandas>=1.3"
+    "fastapi[standard]>=0.115.4",
+    "pydantic>=2.9.2",
+    "sqlmodel>=0.0.22",
 ]
 
 [project.scripts]
@@ -62,6 +65,9 @@ tests = [
     "pytest>=8.0.2",
     "pytest-cov>=4.1.0",
 ]
+
+[tool.hatch.version]
+path = "src/aiventure/__init__.py"
 
 [tool.uv]
 default-groups = ["dev", "docs", "tests"]
