--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    # Add your dependencies here or `uv add <package>` to add them
-    # e.g. "pandas>=1.3"
+    "aiosqlite>=0.20.0",
     "fastapi[standard]>=0.115.4",
+    "pydantic-settings>=2.6.1",
     "pydantic>=2.9.2",
     "sqlmodel>=0.0.22",
 ]
@@ -53,6 +53,7 @@ dev = [
     "pre-commit-hooks>=4.5.0",
     "ruff>=0.3.1",
     "yamllint>=1.35.1",
+    "greenlet>=3.1.1",
 ]
 docs = [
     "mkdocs>=1.5.3",
