--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,11 @@ classifiers = [
 ]
 dependencies = [
     "aiosqlite>=0.20.0",
+    "argon2-cffi>=23.1.0",
     "fastapi[standard]>=0.115.4",
     "pydantic-settings>=2.6.1",
     "pydantic>=2.9.2",
+    "python-jose[cryptography]>=3.3.0",
     "sqlmodel>=0.0.22",
 ]
 
