--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,7 +74,7 @@ repos:
         name: ✅ Check code for common misspellings
         language: system
         types: [python]
-        entry: uv run codespell
+        entry: uv run codespell -L "selectin"
       - id: debug-statements
         name: 🪵  Debug Statements and imports (Python)
         language: system
