--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 ]
 dependencies = [
     "aiosqlite>=0.20.0",
+    "alembic>=1.14.0",
     "argon2-cffi>=23.1.0",
     "fastapi[standard]>=0.115.4",
     "pydantic-settings>=2.6.1",
