--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.0.0-next.60",
+		"bits-ui": "^1.0.0-next.65",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -48,6 +48,7 @@
 		"zod": "^3.23.8"
 	},
 	"dependencies": {
+		"@tanstack/table-core": "^8.20.5",
 		"lucide-svelte": "^0.460.1",
 		"mode-watcher": "^0.4.1"
 	}
